@@ -3,7 +3,7 @@
 <table style="width: 100%;" cellpadding="10">
     <tr>
         <td>
-<form method="post" action="?m=helpdesk&id={$ticket.id}" name="helpdesk">
+<form method="post" action="?m=helpdesk&id={$ticket.id}" name="helpdesk" enctype="multipart/form-data">
 {box title="Message"}
 <input type="hidden" name="helpdesk[inreplyto]" value="{$helpdesk.inreplyto}" />
 <table width="100%" cellpadding="3" class="light">
@@ -27,6 +27,17 @@
 		</td>
 		<td width="98%">
 			<textarea style="width:99%;" name="helpdesk[body]" rows="5" {userpaneltip text="Enter message content" trigger="body"}>{$helpdesk.body}</textarea>
+		</td>
+	</tr>
+	<tr class="light">
+		<td>
+			{img src="attach.gif" alt=""}
+		</td>
+		<td>
+			<b>{trans("Attachments:")}</b>
+		</td>
+		<td>
+			<input type="file" name="files[]" size="55" {userpaneltip text="Enter path to file or click 'Browse' button" trigger="files"} multiple />
 		</td>
 	</tr>
 	<tr class="light">
