@@ -13,7 +13,7 @@
 		<td width="1%" align="right">
 			<b>{trans("From:")}<br/>{trans("Subject:")}</b>
 		</td>
-		<td width="97%" class="nobr">
+		<td width="96%" class="nobr">
 			    {if $message.customerid}
 				    {$message.customername}
 			    {elseif $message.userid}
@@ -29,6 +29,13 @@
 			    <br />
 			    {$message.subject|escape}
 		</td>
+		<td width="1%" nowrap>
+			{if $message.attachments}
+			{foreach $message.attachments as $attachment}
+			{if !$attachment@first}<br>{/if}{$attachment.filename} {img src="attach.gif" alt=""}
+			{/foreach}
+			{/if}
+		</td>
 		<td width="1%">
 			{if $ticket.state != $smarty.const.RT_RESOLVED || ConfigHelper::getConfig('userpanel.allow_message_add_to_closed_tickets')}
 			<a href="?m=helpdesk&op=message&id={$ticket.id}&msgid={$message.id}">{trans("Reply")}</a>
@@ -36,7 +43,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td colspan="4">
+		<td colspan="5">
 			{$message.body|escape|replace:"\n":"<br/>"}
 		</td>
 	</tr>
