@@ -18,6 +18,7 @@ version ?.??.?? (????-??-??):
   - added contract filter for customer list and report [chilan]
   - invoices.customer_credentials and invoices.customer_balance_in_form configuration
     settings were introduced [chilan]
+  - userpanel helpdesk module: ticket/message attachment support added [chilan]
 
 version 1.11.18 (2015-10-01):
 
